@@ -137,7 +137,7 @@ public class CharacterSheetSqlDAO implements CharacterSheetDAO {
         }
         st.close();
         if (!list.isEmpty()) {
-            return list.getFirst();
+            return list.get(0);
         }
         return null;
     }
